[package]
name = "belmont"
version = "0.1.0"
edition = "2024"
description = "Secrets management for coding agents"

[dependencies]
camino = { version = "1", features = ["serde1"] }
keyring = { version = "3", features = ["apple-native"] }
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0"
thiserror = "2"
portable-pty = "0.9"
sigpipe = "0.1.3"

[dev-dependencies]
tempfile = "3"
